major update with websockets and more

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>UniConStudios Boilerplate</title>
+        <title>HTML/Node Boilerplate</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,7 +34,7 @@
 
         <!-- Add your site or application content here -->
         <div ng-controller="theController">
-            <p>Hello world! This is the UniConStudios Client Boilerplate. Forked from html5Boilerplate</p>
+            <p>Hello world! This is the Client Boilerplate. Forked from html5Boilerplate</p>
             <p ng-bind="test"></p>
         </div>
 
@@ -47,6 +47,9 @@
         <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
         <script src="js/vendor/bootstrap/js/bootstrap.min.js"></script>
 
+
+        <script src="js/modules/ws-router.js"></script>
+        <script src="js/modules/ws-connection.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
