--- a/client/index.html
+++ b/client/index.html
@@ -43,32 +43,29 @@
         <div class="resource-bars">
             <h1 ng-bind="stack.bid.name" title="{{stack | json}}"></h1>
 
-            <!--<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>:-->
-            <!--<span ng-bind="stack.power"> </span> / <span ng-bind="stack.powerCap"> </span>-->
-            <div class="progress">
-                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="{{stack.power}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.power,stack.powerCap) + '%'}">
-                    <span class="glyphicon glyphicon-flash" aria-hidden="true"></span>: {{stack.power}} / {{stack.powerCap}}
-                </div>
-            </div>
+            <!--Stack Resources - Deprecated-->
+            <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="{{stack.power}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.power,stack.powerCap) + '%'}">-->
+                    <!--<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>: {{stack.power}} / {{stack.powerCap}}-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <!--<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>:-->
-            <!--<span ng-bind="stack.coolant"> </span> / <span ng-bind="stack.coolantCap"> </span>-->
-            <div class="progress">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{stack.coolant}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.coolant,stack.coolantCap) + '%'}">
-                    <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>: {{stack.coolant}} / {{stack.coolantCap}}
-                </div>
-            </div>
+            <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{stack.coolant}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.coolant,stack.coolantCap) + '%'}">-->
+                    <!--<span class="glyphicon glyphicon-tint" aria-hidden="true"></span>: {{stack.coolant}} / {{stack.coolantCap}}-->
+                <!--</div>-->
+            <!--</div>-->
 
 
-            <div class="progress">
-                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{stack.rawData}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.rawData,stack.dataCap) + '%'}">
-                    <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>: {{stack.rawData}} / {{stack.dataCap}}
-                </div>
-            </div>
+            <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{stack.rawData}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stack.rawData,stack.dataCap) + '%'}">-->
+                    <!--<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>: {{stack.rawData}} / {{stack.dataCap}}-->
+                <!--</div>-->
+            <!--</div>-->
 
             <!--ADD FLOOR-->
-            <div class="well well-lg" ng-click="addFloor(stack)">
-                <div title="{{floor | json}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD FLOOR</div>
+            <div class="well well-lg">
+                <div title="{{floor | json}}" ng-click="addFloor(stack)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD FLOOR</div>
             </div>
 
 
@@ -90,23 +87,39 @@
             <div class="btn-group" ng-repeat="room in floor.rooms">
                 <button type="button" class="btn btn-default btn-block dropdown-toggle" title="{{room | json}}"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                     {{room.bid.name}} - {{room.roomType}}<br>
-                    <span ng-show="room.power[0] >= 0">
-                        <span class="glyphicon glyphicon-flash" aria-hidden="true">{{room.power}}</span><br>
-                    </span>
-                    <span ng-show="room.coolant[0] >= 0">
-                        <span class="glyphicon glyphicon-tint" aria-hidden="true">{{room.coolant}}</span><br>
-                    </span>
-                    <span ng-show="room.heat[0] >= 0">
-                        <span class="glyphicon glyphicon-fire" aria-hidden="true">{{room.heat}}</span><br>
-                    </span>
-                    <span ng-show="room.bits[0] >= 0">
-                        <span class="glyphicon glyphicon-bitcoin" aria-hidden="true">{{room.bits}}</span><br>
-                    </span>
-                    <span ng-show="room.data[0] >= 0">
-                        <span class="glyphicon glyphicon-hdd" aria-hidden="true">{{room.data}}</span><br>
-                    </span>
-                    <br>
+
+                    <div class="progress" ng-repeat="(name,resource) in room.resources">
+                        <div class="progress-bar" ng-class="style[name].progressBarColor" role="progressbar" aria-valuenow="{{resource[0]}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(resource[0],resource[1]) + '%'}">
+                            <span ng-class="style[name].glyphicon"  aria-hidden="true"></span>
+                            <span ng-hide="style[name].glyphicon" ng-bind="name"></span>: {{resource[0]}} / {{resource[1]}}
+                        </div>
+                    </div>
+
+
+                    <!--<span ng-show="room.power[0] >= 0">-->
+                        <!--<span class="glyphicon glyphicon-flash" aria-hidden="true">{{room.power}}</span>-->
+                        <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{room.power[0]}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(room.power[0],room.power[1]) + '%'}">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>: {{room.power[0]}} / {{room.power[1]}}&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--<br>-->
+                    <!--</span>-->
+                    <!--<span ng-show="room.coolant[0] >= 0">-->
+                        <!--<span class="glyphicon glyphicon-tint" aria-hidden="true">{{room.coolant}}</span><br>-->
+                    <!--</span>-->
+                    <!--<span ng-show="room.heat[0] >= 0">-->
+                        <!--<span class="glyphicon glyphicon-fire" aria-hidden="true">{{room.heat}}</span><br>-->
+                    <!--</span>-->
+                    <!--<span ng-show="room.bits[0] >= 0">-->
+                        <!--<span class="glyphicon glyphicon-bitcoin" aria-hidden="true">{{room.bits}}</span><br>-->
+                    <!--</span>-->
+                    <!--<span ng-show="room.data[0] >= 0">-->
+                        <!--<span class="glyphicon glyphicon-hdd" aria-hidden="true">{{room.data}}</span><br>-->
+                    <!--</span>-->
+                    <!--<br>-->
                     <!--{{room.roomType}} -->
                     <span class="caret"></span>
                 </button>
