--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,10 @@
 <head>
     <title>MetaEden: StackTracer</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+
     <link href='//fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+    <link href=
+                  'http://fonts.googleapis.com/css?family=Rajdhani|Dosis|Economica|Tulpen+One|Russo+One|Exo|Titillium+Web|Play|Exo+2|Orbitron|Squada+One|Audiowide|Aldrich|Nova+Square|Text+Me+One' rel='stylesheet' type='text/css'>
 
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -12,43 +15,75 @@
 </head>
 <body ng-app="theApp">
 <div ng-controller="theController">
-    <button type="button" class="btn btn-default btn-block dropdown-toggle" title="{{room | json}}"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <!--<h1 ng-bind="stuff.user.bid.name" title="{{stuff.user | json}}"></h1>-->
-        <h2 ng-bind="stuff.operator.bid.name" title="{{stuff.operator | json}}"></h2>
-        <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{stuff.operator.bits[0]}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stuff.operator.bits[0],stuff.operator.bits[1]) + '%'}">
-                <span class="glyphicon glyphicon-bitcoin" aria-hidden="true"></span>: {{stuff.operator.bits[0]}} / {{stuff.operator.bits[1]}}
+    <div id="cards">
+        <button type="button" class="btn btn-default btn-block dropdown-toggle operator-card" title="{{room | json}}"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!--<h1 ng-bind="stuff.user.bid.name" title="{{stuff.user | json}}"></h1>-->
+            <h2 ng-bind="stuff.operator.bid.name" title="{{stuff.operator | json}}"></h2>
+            <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{stuff.operator.bits[0]}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stuff.operator.bits[0],stuff.operator.bits[1]) + '%'}">
+                    <span class="glyphicon glyphicon-bitcoin" aria-hidden="true"></span>: {{stuff.operator.bits[0]}} / {{stuff.operator.bits[1]}}
+                </div>
             </div>
-        </div>
 
-        <div class="progress">
-            <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{stuff.operator.compressedData}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stuff.operator.compressedData,stuff.operator.compressedDataCap) + '%'}">
-                <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>: {{stuff.operator.compressedData}} / {{stuff.operator.compressedDataCap}}
+            <div class="progress">
+                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="{{stuff.operator.compressedData}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(stuff.operator.compressedData,stuff.operator.compressedDataCap) + '%'}">
+                    <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>: {{stuff.operator.compressedData}} / {{stuff.operator.compressedDataCap}}
+                </div>
             </div>
-        </div>
 
-        <span class="caret"></span>
-    </button>
+        </button>
+        <button type="button" class="btn btn-default btn-block stack-card" title="{{room | json}}"
+                ng-repeat="(iStack,stack) in registry.stacks"
+                ng-click="switchCurrentStack(iStack)" aria-haspopup="true" aria-expanded="false">
+            <h2 title="">{{stack.bid.name}}</h2>
+
+        </button>
+        <button type="button" class="btn btn-default card" title="{{room | json}}"
+                ng-click="addStack()" aria-haspopup="true" aria-expanded="false">
+            <h2 title=""><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Stack</h2>
+
+        </button>
+    </div>
     <br>
+    <!--REGISTRY {{registry | json}}-->
+    <div class="stack-box alert alert-info" ng-show="registry.currentStack">
 
-    <div class="stack-box alert alert-info" ng-repeat="stack in registry.stacks">
+        <!--<div>-->
+            <!--&lt;!&ndash;STACK NAME&ndash;&gt;-->
+            <!--<h1 class=".operator-card" ng-bind="registry.currentStack.bid.name" title="{{registry.currentStack | json}}"></h1>-->
+            <!--Stack X-->
+            <!--&lt;!&ndash;ADD FLOOR&ndash;&gt;-->
+            <!--<div class="btn-group floor-button">-->
+                <!--<button type="button" class="btn btn-default btn-block" title="{{room | json}}"-->
+                        <!--ng-click="addFloor(registry.currentStack)" aria-haspopup="true" aria-expanded="false">-->
+                    <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Floor-->
+                <!--</button>-->
+            <!--</div>-->
+            <!--&lt;!&ndash;<div class="well well-lg">&ndash;&gt;-->
+                <!--&lt;!&ndash;<div title="{{floor | json}}" ng-click="addFloor(registry.currentStack)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD FLOOR</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
 
-        <div>
-            <!--STACK NAME-->
-            <h1 ng-bind="stack.bid.name" title="{{stack | json}}"></h1>
+        <!--</div>-->
+
+        <div class="floors well well-lg">
+
+            <h1 ng-bind="registry.currentStack.bid.name" title="{{floor | json}}"> </h1>
 
             <!--ADD FLOOR-->
-            <div class="well well-lg">
-                <div title="{{floor | json}}" ng-click="addFloor(stack)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ADD FLOOR</div>
+            <div class="btn-group floor-button">
+                <button type="button" class="btn btn-default btn-block floor-button" title="{{room | json}}"
+                        ng-click="addFloor(registry.currentStack)" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Floor
+                </button>
             </div>
 
         </div>
 
         <!--FLOORS-->
-        <div class="floors well well-lg" ng-repeat="floor in stack.floors | orderBy:'-'">
+        <div class="floors well well-lg" ng-repeat="floor in registry.currentStack.floors | orderBy:'-'">
 
-            <span ng-bind="floor.bid.name" title="{{floor | json}}"> </span>
+            <div ng-bind="floor.bid.name" title="{{floor | json}}"> </div>
 
             <div class="btn-group" ng-repeat="room in floor.rooms">
                 <button type="button" class="btn btn-default btn-block dropdown-toggle" title="{{room | json}}"
@@ -57,7 +92,11 @@
                     {{room.bid.name}} - {{room.roomType}}<br>
 
                     <div class="progress" ng-repeat="(name,resource) in room.resources">
-                        <div class="progress-bar" ng-class="style[name].progressBarColor" role="progressbar" aria-valuenow="{{resource[0]}}" aria-valuemin="0" aria-valuemax="100" ng-style="{width: getPercent(resource[0],resource[1]) + '%'}">
+                        <div class="progress-bar"
+                             ng-class="style[name].progressBarColor" role="progressbar"
+                             ng-click="collectBits(room,stuff.operator)"
+                             ng-style="{width: getPercent(resource[0],resource[1]) + '%'}"
+                             aria-valuenow="{{resource[0]}}" aria-valuemin="0" aria-valuemax="100">
                             <span ng-class="style[name].glyphicon"  aria-hidden="true"></span>
                             <span ng-hide="style[name].glyphicon" ng-bind="name"></span>: {{resource[0]}} / {{resource[1]}}
                         </div>
@@ -67,7 +106,7 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><a href="#" ng-click="collectBits(room,stuff.operator)" ng-show="room.resources.bits">Collect Bits</a></li>
-                    <li ng-show="room.roomType == 'compressor'"><a href="#" ng-click="compressData(stack,stuff.operator)">Compress Data</a></li>
+                    <li ng-show="room.roomType == 'compressor'"><a href="#" ng-click="compressData(registry.currentStack,stuff.operator)">Compress Data</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#" ng-click="changeRoomType(room,'core')">Core - (Limit 1)</a></li>
                     <li><a href="#" ng-click="changeRoomType(room,'power')">Power Generator - Generates Power</a></li>
@@ -88,18 +127,25 @@
 
                     <!--<li><a href="#">Separated link</a></li>-->
                 </ul>
+
             </div>
+
             <!--ADD ROOM-->
-            <span ng-click="addRoom(floor)"> <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Room</span>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default btn-block" title="{{room | json}}"
+                        ng-click="addRoom(floor)" aria-haspopup="true" aria-expanded="false">
+                    <span> <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Room</span>
+                </button>
+            </div>
 
         </div>
 
     </div>
-    <div class="well well-lg" ng-click="addStack()">
-        <div>
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Stack
-        </div>
-    </div>
+    <!--<div class="well well-lg" ng-click="addStack()">-->
+        <!--<div>-->
+            <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Stack-->
+        <!--</div>-->
+    <!--</div>-->
 
     <!--<div class="well well-lg">-->
         <!--<div ng-repeat="object in stuff">-->
